--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://antoraphael.github.io/seeker",
+  "homepage": "http://antoraphael.github.io/",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
